<resources>
    <string name="app_name">Taskanduma</string>
    <string name="title_home">Minhas tarefas</string>
    <string name="navbar_tasks">Minhas tarefas</string>
    <string name="navbar_profile">Meu perfil</string>
    <string name="title_dashboard">Meu perfil</string>
    <string name="title_notifications">Notifications</string>
    <string name="login_screen_title">Login</string>
    <string name="login_screen_subtitle">Bem vindo! entre com seu usuário e senha</string>
    <string name="name_form_field_title">Nome</string>
    <string name="name_form_field_placeholder">Insira seu Nome</string>
    <string name="password_form_field_title">Senha</string>
    <string name="password_form_field_placeholder">Insira sua senha</string>
    <string name="login_button_title">Entrar</string>
    <string name="create_account_invite_text1">Não possui uma conta?</string>
    <string name="create_account_invite_text2">Cadastre-se.</string>
    <string name="username_form_field_title">Nome de usuário</string>
    <string name="username_form_field_placeholder">Insira seu nome de usuário</string>
    <string name="register_fisish_button_title">Finalizar cadastro</string>
    <string name="already_have_an_account_text1">Já possui uma conta?</string>
    <string name="already_have_an_account_text2">Entre aqui.</string>
    <string name="password_8_characters_security">A senha deve possuir no mínimo 8 caracteres</string>
    <string name="account_information">Informações da conta</string>
    <string name="logout">Sair</string>
    <string name="title_profile">Perfil</string>
    <string name="save_button">Salvar</string>
    <string name="cancel_button">Cancelar</string>
    <string name="tap_to_change_picture">Clique para editar a foto</string>
    <string name="edit_profile_title">Editar meu perfil</string>
    <string name="all_chip">Todas</string>
    <string name="to_do_chip">Pendente</string>
    <string name="in_progress_chip">Em andamento</string>
    <string name="completed_chip">Finalizada</string>
    <string name="create_new_task_title">Crie sua Tarefa</string>
    <string name="fill_details_create_task">Preencha abaixo os dados da tarefa</string>
    <string name="title_task">Título</string>
    <string name="due_date">Data</string>
    <string name="status_task">Status</string>
    <string name="to_do_stats">Pendente</string>
    <string name="in_progress_stats">Em andamento</string>
    <string name="done_status">Finalizada</string>
    <string name="description_task">Descrição</string>
    <string name="participants">Participantes</string>
    <string name="add_participant_hint">Digite o nome de usuário</string>
    <string name="add_profile_picture">Clique para adicionar sua foto de perfil</string>
    <string name="fill_register_form">Preencha seu cadastro</string>
</resources>